[package]
name = "ftp-rs"
version = "0.1.0"
authors = ["crayfishgo"]
documentation = "https://docs.rs/ftp-rs/"
repository = "https://github.com/CrayfishGo/ftp-rs"
description = "Full supported FTP client for Rust"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
keywords = ["ftp", "ftps"]
categories = ["network-programming"]

[features]
# Enable support of FTPS which requires openssl
ftps = ["tokio-rustls"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.9"
chrono = "0.4.11"

tokio = { version = "1.0.1", features = ["net", "io-util"] }
tokio-rustls = { version = "0.23.0", optional = true }
pin-project = "1.0.0"

[dev-dependencies]
tokio = { version = "1.0.1", features = ["macros", "rt"] }
tokio-util = { version = "0.6.0", features = ["io"] }
tokio-stream = "0.1.0"
