[package]
name = "ftp-rs"
version = "0.2.0"
authors = ["crayfishgo"]
documentation = "https://docs.rs/ftp-rs/"
repository = "https://github.com/CrayfishGo/ftp-rs"
description = "Full supported FTP client for Rust"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
keywords = ["ftp", "ftps"]
categories = ["network-programming"]

[features]
# Enable support of FTPS which requires openssl
ftps = ["tokio-rustls"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.5"
chrono = "0.4"
base64 = "0.13.0"

tokio = { version = "1.17.0", features = ["net", "io-util"] }
tokio-rustls = { version = "0.23.3", optional = true }
pin-project = "1.0.10"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt"] }
tokio-util = { version = "0.7.1", features = ["io"] }
tokio-stream = "0.1.8"
